Буква Ё и другие маленькие исправления

--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService_AddSignatures_1_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService_AddSignatures_1_MT.adoc
@@ -43,4 +43,4 @@ signedCms:::
 
 == Заметки
 
-Данный метод может быть использован для импорта подписанного файла, сохраненного в виде сообщения CMS/PKCS 7, в карточку. {dv} экспортирует подписанные файлы в один файл с расширением `.p7s`, либо в два файла: экспортируемый файл и отдельно сообщение CMS/PKCS 7 в виде файла с расширением `.p7s`. Для извлечения исходного файла из сообщения предназначен метод `xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.DecodeSignedDocument_MT.adoc[IDocumentService.DecodeSignedDocument]`.
+Данный метод может быть использован для импорта подписанного файла, сохранённого в виде сообщения CMS/PKCS 7, в карточку. {dv} экспортирует подписанные файлы в один файл с расширением `.p7s`, либо в два файла: экспортируемый файл и отдельно сообщение CMS/PKCS 7 в виде файла с расширением `.p7s`. Для извлечения исходного файла из сообщения предназначен метод `xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.DecodeSignedDocument_MT.adoc[IDocumentService.DecodeSignedDocument]`.
