--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService_IN.adoc
@@ -88,12 +88,12 @@ public interface IDocumentService
 |`GetFileTypeLocalizedName(DocumentFile)` |Возвращает локализованное название типа файла документа (основной, дополнительный).
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.GetKindSettings_MT.adoc[GetKindSettings(KindsCardKind)]` |Возвращает настройки заданного вида карточки Документ.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.GetMainFile_MT.adoc[GetMainFile(DocumentFile)]` |Возвращает карточку файл с версиями из основного файла документа.
-|`GetMainFileChanged(DocumentFile)` |Возвращает признак того, что в указанном файле есть несохраненные изменения.
+|`GetMainFileChanged(DocumentFile)` |Возвращает признак того, что в указанном файле есть несохранённые изменения.
 |`GetMainFileLockStatus(DocumentFile, LockStatus)` |Возвращает статус блокировки основного файла.
 |`GetMainFileLockStatus(DocumentFile, LockStatus, String)` |Возвращает статус блокировки основного файла и учетную запись заблокировавшего сотрудника.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.GetMainFiles_MT.adoc[GetMainFiles(Document)]` |Возвращает все основные файлы документа.
 |`GetMainFileVersionNumber(DocumentFile, Guid)` |Возвращает строковое представление указанной версии основного файла.
-|`HasAnyMainFileChanged(Document)` |Определяет наличие основного файла карточки с несохраненными изменениями.
+|`HasAnyMainFileChanged(Document)` |Определяет наличие основного файла карточки с несохранёнными изменениями.
 |`HasEditedMainFile(DocumentFile)` |Определяет наличие редактируемого основного файла карточки.
 |`HasEditedMainFile(DocumentFile, LockStatus)` |Определяет наличие редактируемого основного файла карточки. Текущий статус блокировки файла указывается принудительно.
 |`HasFreeMainFile(DocumentFile)` |Возвращает `true`, если указанный основной файл свободен.
