--- a/modules/BackOffice-WinForms/pages/BaseCardControl.HasChanges_MT.adoc
+++ b/modules/BackOffice-WinForms/pages/BaseCardControl.HasChanges_MT.adoc
@@ -1,6 +1,6 @@
 = BaseCardControl.HasChanges -- метод
 
-Возвращает признак наличия не сохраненных изменений в контексте объектов.
+Возвращает признак наличия не сохранённых изменений в контексте объектов.
 
 * *Пространство имён:* `xref:WinForms_NS.adoc[DocsVision.BackOffice.WinForms]`
 * *Сборка:* `DocsVision.BackOffice.WinForms.dll`
@@ -15,7 +15,7 @@ public virtual bool HasChanges()
 Возвращаемое значение::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
-`true` -- есть не сохраненные изменения, иначе -- `false`
+`true` -- есть не сохранённые изменения, иначе -- `false`
 
 == Заметки
 
