--- a/modules/BackOffice-WinForms/pages/BaseCardControl.Rollback_MT.adoc
+++ b/modules/BackOffice-WinForms/pages/BaseCardControl.Rollback_MT.adoc
@@ -1,6 +1,6 @@
 = BaseCardControl.Rollback -- метод (Boolean)
 
-Отменяет несохраненные изменения данных карточки.
+Отменяет несохранённые изменения данных карточки.
 
 * *Пространство имён:* `xref:WinForms_NS.adoc[DocsVision.BackOffice.WinForms]`
 * *Сборка:* `DocsVision.BackOffice.WinForms.dll`
