--- a/modules/Platform-CardHost/pages/CardHost/ICardHost_IN.adoc
+++ b/modules/Platform-CardHost/pages/CardHost/ICardHost_IN.adoc
@@ -21,7 +21,7 @@ public interface ICardHost
 |`CardCount` |Возвращает количество запущенных немодальных карточек.
 |`ExtensionManager` |Возвращает интерфейс взаимодействия с расширениями {wincl}а.
 |`FolderCardId` |Возвращает идентификатор карточки папок.
-|`SearchCardId` |Возвращает идентификатор карточки сохраненных поисковых запросов.
+|`SearchCardId` |Возвращает идентификатор карточки сохранённых поисковых запросов.
 |`ViewCardId` |Возвращает идентификатор карточки представления.
 |===
 
