--- a/modules/Platform-ObjectManager-CardData/pages/CardData.CancelUpdate_MT.adoc
+++ b/modules/Platform-ObjectManager-CardData/pages/CardData.CancelUpdate_MT.adoc
@@ -1,6 +1,6 @@
 = CardData.CancelUpdate -- метод
 
-Отменить несохраненные изменения и выключить режим отложенных изменений.
+Отменить несохранённые изменения и выключить режим отложенных изменений.
 
 * *Пространство имён:* `xref:Platform-ObjectManager-Metadata:ObjectManager_NS.adoc[DocsVision.Platform.ObjectManager]`
 * *Сборка:* `DocsVision.Platform.ObjectManager.dll`
