--- a/modules/Platform-ObjectManager-CardData/pages/CardData_CL.adoc
+++ b/modules/Platform-ObjectManager-CardData/pages/CardData_CL.adoc
@@ -51,7 +51,7 @@ public abstract class CardData : IUpdatable, ILockable, IXmlExportable
 |`xref:CardData.AddToTopicChain_MT.adoc[AddToTopicChain(Guid)]` |Добавляет текущую карточку к теме обработки другой карточки.
 |`xref:CardData.Archive_MT.adoc[Archive(ArchiveOptions)]` |Помещает текущую карточку в архив.
 |`xref:CardData.BeginUpdate_MT.adoc[BeginUpdate]` |Включить режим отложенных изменений.
-|`xref:CardData.CancelUpdate_MT.adoc[CancelUpdate]` |Отменить несохраненные изменения и выключить режим отложенных изменений.
+|`xref:CardData.CancelUpdate_MT.adoc[CancelUpdate]` |Отменить несохранённые изменения и выключить режим отложенных изменений.
 |`xref:CardData.Copy_MT.adoc[Copy]` |Серверное копирование данных карточек.
 |`xref:CardData.Dearchive_MT.adoc[Dearchive(ArchiveOptions)]` |Восстанавливает карточку из архива.
 |`xref:CardData.EndUpdate_MT.adoc[EndUpdate]` |Записать изменения и выключить режим отложенных изменений.
