--- a/modules/Platform-ObjectManager-CardManager/pages/CardManager.FindCardsInfo_MT.adoc
+++ b/modules/Platform-ObjectManager-CardManager/pages/CardManager.FindCardsInfo_MT.adoc
@@ -25,4 +25,4 @@ queryId:::
 
 == Заметки
 
-Поиск осуществляется согласно заданному запросу, сохраненному в системе.
+Поиск осуществляется согласно заданному запросу, сохранённому в системе.
