--- a/modules/Platform-ObjectManager-CardManager/pages/CardManager.GetViewData_2_MT.adoc
+++ b/modules/Platform-ObjectManager-CardManager/pages/CardManager.GetViewData_2_MT.adoc
@@ -1,6 +1,6 @@
 = CardManager.GetViewData -- метод (ViewSource, Guid)
 
-Возвращает данные сохраненного представления с указанным идентификатором.
+Возвращает данные сохранённого представления с указанным идентификатором.
 
 * *Пространство имён:* `xref:Platform-ObjectManager-Metadata:ObjectManager_NS.adoc[DocsVision.Platform.ObjectManager]`
 * *Сборка:* `DocsVision.Platform.ObjectManager.dll`
