--- a/modules/Platform-ObjectManager-CardManager/pages/CardManager_CL.adoc
+++ b/modules/Platform-ObjectManager-CardManager/pages/CardManager_CL.adoc
@@ -124,13 +124,13 @@ public abstract class CardManager
 |Возвращает данные представления карточки для заданного источника данных представлений.
 
 |`xref:CardManager.GetViewData_2_MT.adoc[GetViewData(ViewSource, Guid)]`
-|Возвращает данные сохраненного представления с указанным идентификатором.
+|Возвращает данные сохранённого представления с указанным идентификатором.
 
 |`xref:CardManager.GetViewData_3_MT.adoc[GetViewData(ViewSource, String)]`
 |Возвращает данные представления с заданным описанием.
 
 |`xref:CardManager.GetViewData_4_MT.adoc[GetViewData(ViewSource, Guid, QueryParameterCollection)]`
-|Возвращает данные сохраненного представления с указанным идентификатором, с указанием параметров поиска.
+|Возвращает данные сохранённого представления с указанным идентификатором, с указанием параметров поиска.
 
 |`xref:CardManager.GetViewData_5_MT.adoc[GetViewData(ViewSource, string, QueryParameterCollection)]`
 |Возвращает данные представления с учетом приведенного описания, с указанием параметров поиска.
