--- a/modules/Platform-ObjectManager-ILockable/pages/FileData_CL.adoc
+++ b/modules/Platform-ObjectManager-ILockable/pages/FileData_CL.adoc
@@ -45,7 +45,7 @@ public abstract class FileData : IUpdatable, ILockable
 |`Archive(Boolean)` |Перенос файла в архив
 |`BeginUpdate` |Включает режим отложенных изменений.
 |`BringOnline` |Восстановление файла из `offline` хранилища.
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`Copy` a|
 Создание копии файла на сервере.
 
