--- a/modules/Platform-ObjectManager-IUpdatable/pages/IUpdatable_IN.adoc
+++ b/modules/Platform-ObjectManager-IUpdatable/pages/IUpdatable_IN.adoc
@@ -26,7 +26,7 @@ public interface IUpdatable
 |===
 |Имя |Описание
 |`xref:IUpdatable.BeginUpdate_MT.adoc[BeginUpdate]` |При переопределении в производном классе включает режим отложенных изменений.
-|`xref:IUpdatable.CancelUpdate_MT.adoc[CancelUpdate]` |При переопределении в производном классе отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`xref:IUpdatable.CancelUpdate_MT.adoc[CancelUpdate]` |При переопределении в производном классе отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`xref:IUpdatable.EndUpdate_MT.adoc[EndUpdate]` |При переопределении в производном классе отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
 |`xref:IUpdatable.MarkCardForDeletion_MT.adoc[MarkCardForDeletion(Guid)]` |При переопределении в производном классе требует удаление указанной карточки при отмене изменений, если задействован режим отложенных изменений.
 |`xref:IUpdatable.UpdateNow_MT.adoc[UpdateNow]` |При переопределении в производном классе позволяет отправить накопленные изменения на сервер.
