--- a/modules/Platform-ObjectManager-Row/pages/RowData_CL.adoc
+++ b/modules/Platform-ObjectManager-Row/pages/RowData_CL.adoc
@@ -42,7 +42,7 @@ public abstract class RowData : IUpdatable, ILockable, IXmlExportable
 |Имя |Описание
 |`AccessCheck(System.Int32)` |Проверяет наличие заданного доступа.
 |`BeginUpdate` |Включает режим отложенных изменений.
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`Copy(Guid, Guid)` |Создает копию строки в указанном месте дерева иерархии.
 |`EndUpdate` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
 |`ForceUnlock` |Принудительно снимает блокировку.
