--- a/modules/Platform-ObjectManager-SectionData/pages/SectionData.CancelUpdate_MT.adoc
+++ b/modules/Platform-ObjectManager-SectionData/pages/SectionData.CancelUpdate_MT.adoc
@@ -1,6 +1,6 @@
 = SectionData.CancelUpdate -- метод
 
-Отменяет несохраненные изменения и выключает режим отложенных изменений.
+Отменяет несохранённые изменения и выключает режим отложенных изменений.
 
 * *Пространство имён:* `xref:Platform-ObjectManager-Metadata:ObjectManager_NS.adoc[DocsVision.Platform.ObjectManager]`
 * *Сборка:* `DocsVision.Platform.ObjectManager.dll`
