--- a/modules/Platform-ObjectManager-SectionData/pages/SectionData_CL.adoc
+++ b/modules/Platform-ObjectManager-SectionData/pages/SectionData_CL.adoc
@@ -34,7 +34,7 @@ public abstract class SectionData : IUpdatable, IXmlExportable
 |===
 |Имя |Описание
 |`xref:SectionData.BeginUpdate_MT.adoc[BeginUpdate]` |Включает режим отложенных изменений.
-|`xref:SectionData.CancelUpdate_MT.adoc[CancelUpdate]` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`xref:SectionData.CancelUpdate_MT.adoc[CancelUpdate]` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`xref:SectionData.CheckRow_MT.adoc[CheckRow(Guid, Boolean)]` |Проверяет наличие в секции строки с заданным идентификатором.
 |`xref:SectionData.CreateRow_MT.adoc[CreateRow]` |Создает новую строку в секции.
 |`xref:SectionData.CreateRow_1_MT.adoc[CreateRow(Guid)]` |Создает в секции новую строку с заданным идентификатором.
