--- a/modules/Platform-ObjectManager-SubsectionData/pages/SubSectionData_CL.adoc
+++ b/modules/Platform-ObjectManager-SubsectionData/pages/SubSectionData_CL.adoc
@@ -32,7 +32,7 @@ public abstract class SubSectionData : IUpdatable, IXmlExportable
 |===
 |Имя |Описание
 |`xref:SubSectionData.BeginUpdate_MT.adoc[BeginUpdate]` |Включает режим отложенных изменений.
-|`xref:SubSectionData.CancelUpdate_MT.adoc[CancelUpdate]` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`xref:SubSectionData.CancelUpdate_MT.adoc[CancelUpdate]` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`xref:SubSectionData.EndUpdate_MT.adoc[EndUpdate]` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
 |`xref:SubSectionData.FindRow_MT.adoc[FindRow(String)]` |Осуществляет поиск строки в секции с использованием XPath-запроса.
 |`xref:SubSectionData.GetAllRows_MT.adoc[GetAllRows]` |Получение всех строк секции подсекции.
