--- a/modules/Platform-ObjectManager-SystemCards/pages/FolderCard_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/FolderCard_CL.adoc
@@ -19,8 +19,8 @@ public abstract class FolderCard : SystemCard
 |Имя |Описание
 |`Folders` |Возвращает коллекцию папок верхнего уровня.
 |`Icons` |Возвращает коллекцию иконок папок.
-|`SearchCardId` |Задает или возвращает идентификатор карточки сохраненных поисковых запросов.
-|`ViewCardId` |Задает или возвращает идентификатор текущей карточки сохраненных представлений.
+|`SearchCardId` |Задает или возвращает идентификатор карточки сохранённых поисковых запросов.
+|`ViewCardId` |Задает или возвращает идентификатор текущей карточки сохранённых представлений.
 |===
 
 == Методы
