--- a/modules/Platform-ObjectManager-SystemCards/pages/Folder_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/Folder_CL.adoc
@@ -43,7 +43,7 @@ public abstract class Folder : IUpdatable
 |`RefId` |Задает или возвращает идентификатор оригинальной папки, для папки-делегата.
 |`RefreshTimeout` |Возвращает или задает индивидуальный период обновления содержимого папки.
 |`xref:Folder.Restrictions_PR.adoc[Restrictions]` |Возвращает или задает признак наличия ограничений папки.
-|`SavedParameters` |Возвращает коллекцию сохраненных значений параметров поискового запроса.
+|`SavedParameters` |Возвращает коллекцию сохранённых значений параметров поискового запроса.
 |`Session` |Возвращает текущую сессию пользователя.
 |`Shortcuts` |Возвращает коллекцию ярлыков папки.
 |`Type` |Задает или возвращает тип папки.
@@ -58,7 +58,7 @@ public abstract class Folder : IUpdatable
 |===
 |Имя |Описание
 |`BeginUpdate` |Включает режим отложенных изменений.
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`Copy(Guid)` |Копирование папки в указанную папку.
 |`Copy(Guid, String)` |Копирование папки в указанную папку с изменением конечного имени.
 |`CopyData(Guid, String, Boolean)` |Копирование данных папки в указанную папку с изменением имени конечного каталога.
