--- a/modules/Platform-ObjectManager-SystemCards/pages/NumeratorRange_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/NumeratorRange_CL.adoc
@@ -31,7 +31,7 @@ public abstract class NumeratorRange : IUpdatable
 |===
 |Имя |Описание
 |`BeginUpdate` |Включает режим отложенных изменений
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`EndUpdate` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
 |`MarkCardForDeletion(Guid)` |Требует удаление указанной карточки при отмене изменений, если задействован режим отложенных изменений.
 |`SetEndNumber(Int32)` |Устанавливает конченый номер диапазона.
