--- a/modules/Platform-ObjectManager-SystemCards/pages/NumeratorZone_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/NumeratorZone_CL.adoc
@@ -31,7 +31,7 @@ public abstract class NumeratorZone : IUpdatable
 |Имя |Описание
 |`AllocateNumber(Guid, Int32)` |Резервирует в текущей зоне заданный номер за заданным пользователем.
 |`BeginUpdate` |Включает режим отложенных изменений
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`EndUpdate` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
 |`GetNumber(Guid)` |Возвращает номер по его идентификатору.
 |`GetNumber(Guid, Boolean, Guid)` |Получает номер для заданного пользователя с заданным идентификатором.
