--- a/modules/Platform-ObjectManager-SystemCards/pages/SavedViewGroupCollection_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/SavedViewGroupCollection_CL.adoc
@@ -31,7 +31,7 @@ public abstract class SavedViewGroupCollection : IEnumerable<SavedViewGroup>, IE
 |`AddNew(String)` |Создает элемент типа `SavedViewGroup` с заданным именем.
 |`Clear` |Удаляет все элементы коллекции.
 |`Contains(Guid)` |Проверяет вхождение в коллекцию элемента с заданным идентификатором.
-|`GetByName(String)` |Возвращает сохраненную группу представлений по названию.
+|`GetByName(String)` |Возвращает сохранённую группу представлений по названию.
 |`GetEnumerator` |Возвращает перечислитель.
 |`Remove(Guid)` |Удаляет элемент коллекции с указанным идентификатором.
 |`Remove(Int32)` |Удаляет элемент коллекции с указанным индексом.
