--- a/modules/Platform-ObjectManager-SystemCards/pages/SavedViewGroup_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/SavedViewGroup_CL.adoc
@@ -32,7 +32,7 @@ public abstract class SavedViewGroup : IUpdatable
 |===
 |Имя |Описание
 |`BeginUpdate` |Включает режим отложенных изменений.
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`Copy(Guid)` |Копирует группу в другую группу представлений.
 |`EndUpdate` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
 |`GetHierarchy` |Получение иерархии идентификаторов групп начиная к корневого элемента.
