--- a/modules/Platform-ObjectManager-SystemCards/pages/SavedView_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/SavedView_CL.adoc
@@ -1,6 +1,6 @@
 = SavedView -- класс
 
-Предоставляет доступ к сохраненному описанию представления.
+Предоставляет доступ к сохранённому описанию представления.
 
 * *Пространство имён:* `xref:SystemCards_NS.adoc[DocsVision.Platform.ObjectManager.SystemCards]`
 * *Сборка:* `DocsVision.Platform.ObjectManager.dll`
@@ -33,7 +33,7 @@ public abstract class SavedView : IUpdatable
 |===
 |Имя |Описание
 |`xref:SavedView.BeginUpdate_MT.adoc[BeginUpdate]` |Включает режим отложенных изменений.
-|`xref:SavedView.CancelUpdate_MT.adoc[CancelUpdate]` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`xref:SavedView.CancelUpdate_MT.adoc[CancelUpdate]` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`xref:SavedView.Copy_MT.adoc[Copy(Guid)]` |Создает копию представления в указанной группе представлений.
 |`xref:SavedView.EndUpdate_MT.adoc[EndUpdate]` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
 |`xref:SavedView.Export_MT.adoc[Export]` |Позволяет получить объект для упрощенной работы с представлением.
