--- a/modules/Platform-ObjectManager-SystemCards/pages/SavedVirtualField_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/SavedVirtualField_CL.adoc
@@ -1,6 +1,6 @@
 = SavedVirtualField -- класс
 
-Представляет сохраненное описание виртуального поля.
+Представляет сохранённое описание виртуального поля.
 
 * *Пространство имён:* `xref:SystemCards_NS.adoc[DocsVision.Platform.ObjectManager.SystemCards]`
 * *Сборка:* `DocsVision.Platform.ObjectManager.dll`
@@ -31,10 +31,10 @@ public abstract class SavedVirtualField : IUpdatable
 |===
 |Имя |Описание
 |`BeginUpdate` |Включает режим отложенных изменений.
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`EndUpdate` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
-|`Export` |Создает на основе сохраненного поля типа `VirtualField`.
-|`Import(VirtualField)` |Загружает описание в сохраненное поле из объекта типа `VirtualField`.
+|`Export` |Создает на основе сохранённого поля типа `VirtualField`.
+|`Import(VirtualField)` |Загружает описание в сохранённое поле из объекта типа `VirtualField`.
 |`MarkCardForDeletion(Guid)` |Требует удаление указанной карточки при отмене изменений, если задействован режим отложенных изменений.
 |`UpdateNow` |Позволяет отправить накопленные изменения на сервер.
 |===
