--- a/modules/Platform-ObjectManager-SystemCards/pages/Shortcut_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/Shortcut_CL.adoc
@@ -36,7 +36,7 @@ public abstract class Shortcut : IUpdatable
 |===
 |Имя |Описание
 |`BeginUpdate` |Включает режим отложенных изменений.
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`Copy(Guid)` |Копирует ярлык в указанную папку.
 |`EndUpdate` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
 |`MarkCardForDeletion(Guid)` |Требует удаление указанной карточки при отмене изменений, если задействован режим отложенных изменений.
