--- a/modules/Platform-ObjectManager-SystemCards/pages/SystemCards_NS.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/SystemCards_NS.adoc
@@ -27,20 +27,20 @@
 |`xref:NumeratorCard_CL.adoc[NumeratorCard]` |Содержит свойства и методы работы с экземпляром нумератора.
 |`xref:NumeratorRange_CL.adoc[NumeratorRange]` |Содержит методы для работы с диапазоном номеров нумератора.
 |`xref:NumeratorZone_CL.adoc[NumeratorZone]` |Содержит методы для работы с зонами нумератора.
-|`xref:SavedView_CL.adoc[SavedView]` |Предоставляет доступ к сохраненному описанию представления.
+|`xref:SavedView_CL.adoc[SavedView]` |Предоставляет доступ к сохранённому описанию представления.
 |`xref:SavedViewCollection_CL.adoc[SavedViewCollection]` |Содержит методы для работы с коллекцией SavedView.
 |`xref:SavedViewGroup_CL.adoc[SavedViewGroup]` |Представляет группу представлений.
 |`xref:SavedViewGroupCollection_CL.adoc[SavedViewGroupCollection]` |Содержит методы для работы с коллекцией `SavedViewGroup`.
-|`xref:SavedVirtualField_CL.adoc[SavedVirtualField]` |Представляет сохраненное описание виртуального поля.
+|`xref:SavedVirtualField_CL.adoc[SavedVirtualField]` |Представляет сохранённое описание виртуального поля.
 |`SavedVirtualFieldCollection` |Содержит методы для работы с коллекцией `SavedVirtualField`.
-|`SearchCard` |Объектная модель карточки сохраненных запросов.
+|`SearchCard` |Объектная модель карточки сохранённых запросов.
 |`SearchHistoryCollection` |Содержит методы для работы с коллекцией `SearchHistory`.
 |`xref:Shortcut_CL.adoc[Shortcut]` |Специализированный тип отражающий семантику объекта "Ярлык".
 |`ShortcutCollection` |Содержит методы для работы с коллекцией Shortcut.
 |`SystemCard` |Базовый класс для системных карточек.
 |`UserProfileCard` |Карточка содержащая профиль пользователя.
 |`xref:VersionedFileCard_CL.adoc[VersionedFileCard]` |Реализует логику карточки *файл с версиями*.
-|`xref:ViewCard_CL.adoc[ViewCard]` |Представляет системную карточку сохраненных представлений.
+|`xref:ViewCard_CL.adoc[ViewCard]` |Представляет системную карточку сохранённых представлений.
 |`ViewColumnSettings` |Представляет настройки колонки представления.
 |`ViewColumnSettingsCollection` |Содержит методы для работы с коллекцией `ViewColumnSettings`.
 |`ViewGrouping` |Представляет настройки группировки представления.
