--- a/modules/Platform-ObjectManager-SystemCards/pages/ViewCard.Views_PR.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/ViewCard.Views_PR.adoc
@@ -1,6 +1,6 @@
 = ViewCard.Views -- свойство
 
-Возвращает коллекцию сохраненных описаний представлений.
+Возвращает коллекцию сохранённых описаний представлений.
 
 * *Пространство имён:* `xref:SystemCards_NS.adoc[DocsVision.Platform.ObjectManager.SystemCards]`
 * *Сборка:* `DocsVision.Platform.ObjectManager.dll`
@@ -15,4 +15,4 @@ public abstract SavedViewCollection Views { get; }
 Значение свойства::
 Тип: `xref:SavedViewCollection_CL.adoc[SavedViewCollection]`
 +
-Коллекция сохраненных описаний представлений
+Коллекция сохранённых описаний представлений
