--- a/modules/Platform-ObjectManager-SystemCards/pages/ViewCard_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/ViewCard_CL.adoc
@@ -1,6 +1,6 @@
 = ViewCard -- класс
 
-Представляет системную карточку сохраненных представлений.
+Представляет системную карточку сохранённых представлений.
 
 * *Пространство имён:* `xref:SystemCards_NS.adoc[DocsVision.Platform.ObjectManager.SystemCards]`
 * *Сборка:* `DocsVision.Platform.ObjectManager.dll`
@@ -18,7 +18,7 @@ public abstract class ViewCard : SystemCard
 |===
 |Имя |Описание
 |`xref:ViewCard.Groups_PR.adoc[Groups]` |Возвращает коллекцию групп представлений.
-|`xref:ViewCard.Views_PR.adoc[Views]` |Возвращает коллекцию сохраненных описаний представлений.
+|`xref:ViewCard.Views_PR.adoc[Views]` |Возвращает коллекцию сохранённых описаний представлений.
 |===
 
 == Методы
@@ -31,18 +31,18 @@ public abstract class ViewCard : SystemCard
 |`xref:ViewCard.DeleteView_MT.adoc[DeleteView(Guid)]` |Удаляет заданное представление.
 |`xref:ViewCard.GetGroup_MT.adoc[GetGroup(Guid)]` |Получает группу представлений с заданным идентификатором.
 |`xref:ViewCard.GetView_MT.adoc[GetView(Guid)]` |Получает представление с заданным идентификатором.
-|`xref:ViewCard.GetVirtualFields_MT.adoc[GetVirtualFields(Guid)]` |Получает коллекцию сохраненных описаний виртуальных полей для секции заданного типа.
+|`xref:ViewCard.GetVirtualFields_MT.adoc[GetVirtualFields(Guid)]` |Получает коллекцию сохранённых описаний виртуальных полей для секции заданного типа.
 |`xref:ViewCard.GroupExists_MT.adoc[GroupExists(Guid)]` |Проверяет существование группы представлений с заданным идентификатором.
 |`xref:ViewCard.ViewExists_MT.adoc[ViewExists(Guid)]` |Проверяет существование представления с заданным идентификатором.
 |===
 
 == Заметки
 
-Карточка сохраненных представлений является справочником, поэтому её экземпляр всегда можно получить по идентификатору `17F8F0B3-7E93-45E9-B250-EED4E93F3FA3`.
+Карточка сохранённых представлений является справочником, поэтому её экземпляр всегда можно получить по идентификатору `17F8F0B3-7E93-45E9-B250-EED4E93F3FA3`.
 
 == Примеры
 
-Получение карточки сохраненных представлений:
+Получение карточки сохранённых представлений:
 
 [source,csharp]
 ----
