--- a/modules/Platform-ObjectManager-SystemCards/pages/ViewSettings_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/ViewSettings_CL.adoc
@@ -45,7 +45,7 @@ public abstract class ViewSettings : IUpdatable
 |===
 |Имя |Описание
 |`BeginUpdate` |Включает режим отложенных изменений.
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`Clear` |Удаляет настройки представления.
 |`Copy(Guid)` |Создает копию настроек указанного представления.
 |`EndUpdate` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
