--- a/modules/Platform-ObjectManager-UserSession/pages/ViewSource_CL.adoc
+++ b/modules/Platform-ObjectManager-UserSession/pages/ViewSource_CL.adoc
@@ -33,7 +33,7 @@ public sealed class ViewSource
 |`FromFolder(Guid)` |Источником данных является заданная папка.
 |`FromRecycleBin` |Источником является корзина.
 |`FromReferences` |Источником являются справочники.
-|`FromSearch(Guid)` |Источником является сохраненный поисковый запрос.
+|`FromSearch(Guid)` |Источником является сохранённый поисковый запрос.
 |`FromSearch(String)` |Источником является сформированный поисковый запрос (XML).
 |`FromSearchFolder(Guid)` |Источником является заданная виртуальная папка.
 |`FromSearchResults(Guid)` |Источником является заданная системная папка "Результаты поиска".
