--- a/modules/Platform-ObjectModel/pages/IObjectContext_IN.adoc
+++ b/modules/Platform-ObjectModel/pages/IObjectContext_IN.adoc
@@ -34,7 +34,7 @@ public interface IObjectContext
 |`GetObject<T>(ObjectRef<T>)` |При переопределении в производном классе получает объект заданного типа из переданной ссылки.
 |`GetObjectRef<T>(Object)` |При переопределении в производном классе получает ссылку на объект заданного типа с указанным идентификатором.
 |`GetObjectRef(ObjectBase)` |При переопределении в производном классе получает ссылку на объект.
-|`RollbackChanges` |При переопределении в производном классе отменяет произведенные несохраненные изменения во всех объектах контекста.
+|`RollbackChanges` |При переопределении в производном классе отменяет произведенные несохранённые изменения во всех объектах контекста.
 |`SaveObject<T>(T)` |При переопределении в производном классе сохраняет изменения в указанном объекте.
 |`SaveObjects<T>(IEnumerable<T>)` |При переопределении в производном классе сохраняет изменения в заданной коллекции объектов.
 |===
