--- a/modules/Platform-ObjectModel/pages/ObjectContext.RollBackObject_MT.adoc
+++ b/modules/Platform-ObjectModel/pages/ObjectContext.RollBackObject_MT.adoc
@@ -1,6 +1,6 @@
 = ObjectContext.RollBackObject -- метод (ObjectBase)
 
-Отменяет несохраненные изменения в заданном объекте.
+Отменяет несохранённые изменения в заданном объекте.
 
 * *Пространство имён:* `xref:ObjectModel_NS.adoc[DocsVision.Platform.ObjectModel]`
 * *Сборка:* `DocsVision.Platform.ObjectModel.dll`
