--- a/modules/Platform-ObjectModel/pages/ObjectContext.SaveObject_1_MT.adoc
+++ b/modules/Platform-ObjectModel/pages/ObjectContext.SaveObject_1_MT.adoc
@@ -21,7 +21,7 @@ objectInstance:::
 Возвращаемое значение::
 Тип: `xref:IObjectRef_IN.adoc[IObjectRef]`
 +
-Ссылка на сохраненный объект
+Ссылка на сохранённый объект
 
 == Исключения
 
