--- a/modules/Platform-SystemCards/pages/ObjectModel/ObjectModel_NS.adoc
+++ b/modules/Platform-SystemCards/pages/ObjectModel/ObjectModel_NS.adoc
@@ -17,5 +17,5 @@
 |===
 |Класс |Описание
 |`xref:ObjectModel/FoldersFolder_CL.adoc[FoldersFolder]` |Объектная модель папки.
-|`xref:ObjectModel/SavedViewsView_CL.adoc[SavedViewsView]` |Представляет объектную модель _Карточки сохраненных представлений_.
+|`xref:ObjectModel/SavedViewsView_CL.adoc[SavedViewsView]` |Представляет объектную модель _Карточки сохранённых представлений_.
 |===
