--- a/modules/Platform-SystemCards/pages/ObjectModel/SavedViewsView_CL.adoc
+++ b/modules/Platform-SystemCards/pages/ObjectModel/SavedViewsView_CL.adoc
@@ -1,6 +1,6 @@
 = SavedViewsView -- класс
 
-Представляет объектную модель _Карточки сохраненных представлений_.
+Представляет объектную модель _Карточки сохранённых представлений_.
 
 * *Пространство имён:* `xref:Platform-ObjectModel:ObjectModel_NS.adoc[DocsVision.Platform.SystemCards.ObjectModel]`
 * *Сборка:* `DocsVision.Platform.SystemCards.ObjectModel.dll`
