--- a/modules/Workflow/pages/Objects/LogMessage_CL.adoc
+++ b/modules/Workflow/pages/Objects/LogMessage_CL.adoc
@@ -27,7 +27,7 @@ public class LogMessage : LogMessageWrapper
 |===
 |Имя |Описание
 |`BeginUpdate` |Включает режим отложенных изменений.
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`EndUpdate` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
 |`Refresh` |Выполняет обновление данных.
 |`UpdateNow` |Отправляет накопленные изменения на сервер.
