--- a/modules/Workflow/pages/Objects/PassState_CL.adoc
+++ b/modules/Workflow/pages/Objects/PassState_CL.adoc
@@ -37,7 +37,7 @@ public class PassState : PassStateWrapper
 |===
 |Имя |Описание
 |`BeginUpdate` |Включает режим отложенных изменений.
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`EndUpdate` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
 |`GetLocalizedPassState(Int32)` |Возвращает локализованное название текущего состояния функции.
 |`Refresh` |Запускает принудительное обновление данных карточки с сервера.
