--- a/modules/Workflow/pages/Objects/Process_CL.adoc
+++ b/modules/Workflow/pages/Objects/Process_CL.adoc
@@ -58,7 +58,7 @@ public class Process : ProcessWrapper
 |`AddLogMessage(ActionTypeEnum, String, Int32, String, String, String, String, String)` |Создает запись в журнале текущего БП.
 |`AddToTopicChain(String)` |Добавляет БП к теме обработки карточки с заданным идентификатором.
 |`BeginUpdate` |Включает режим отложенных изменений.
-|`CancelUpdate` |Отменяет несохраненные изменения и выключает режим отложенных изменений.
+|`CancelUpdate` |Отменяет несохранённые изменения и выключает режим отложенных изменений.
 |`ClearLogMessages` |Удаляет записи журнала БП.
 |`ComputeExecutionMode(Dictionary)` |Определяет режим/платформу исполнения БП и задает `base.ExecutionMode`. При любых конфликтах определения платформы будет возвращено исключение.
 |`EndUpdate` |Отправляет накопленные изменения на сервер и выключает режим отложенных изменений.
