--- a/modules/appendix/pages/controls/obsolete/data-source/CardDataSource.adoc
+++ b/modules/appendix/pages/controls/obsolete/data-source/CardDataSource.adoc
@@ -32,11 +32,11 @@ image::ROOT:select-card-source.png[Выбор типа карточек]
 .Указание поискового запроса для отбора карточек
 image::ROOT:specify-search-query.png[Указание поискового запроса для отбора карточек]
 
-Можно выбрать уже готовый запрос из числа сохраненных, или ввести непосредственно текст запроса в виде XML -- для этого необходимо установить курсор на специальную ветку (Custom), тогда в правой части станет доступным элемент управления для редактирования поискового запроса.
+Можно выбрать уже готовый запрос из числа сохранённых, или ввести непосредственно текст запроса в виде XML -- для этого необходимо установить курсор на специальную ветку (Custom), тогда в правой части станет доступным элемент управления для редактирования поискового запроса.
 
 [CAUTION]
 ====
-При выборе сохраненного поискового запроса, источник данных копирует и сохраняет его непосредственный текст, а не ссылку. Поэтому последующие изменения этого сохраненного запроса в базе данных уже не отразятся на источнике данных -- его придется заново явно конфигурировать.
+При выборе сохранённого поискового запроса, источник данных копирует и сохраняет его непосредственный текст, а не ссылку. Поэтому последующие изменения этого сохранённого запроса в базе данных уже не отразятся на источнике данных -- его придется заново явно конфигурировать.
 ====
 
 После указания запроса и нажатия кнопки *Finish*, конфигурирование источника данных завершается. Впоследствии все установленные при помощи мастера параметры можно изменить -- в окне свойств (_Properties_) в Visual Studio, или в run-time в виде свойств объекта `_CardDataSource_`.
