--- a/modules/appendix/pages/controls/obsolete/data-source/RowDataSource.adoc
+++ b/modules/appendix/pages/controls/obsolete/data-source/RowDataSource.adoc
@@ -27,7 +27,7 @@ image::ROOT:select-card-id.png[Выбор ID карточки]
 
 Для выбора конкретной карточки можно воспользоваться кнопкой *Select card*. Флаг `*Use the card data from runtime*` сигнализирует о том, что для получения данных будет использоваться динамический объект, доступный через свойство `*CardData*` в контексте данной формы. В случае разработки компонента карточки, это будут данные самой этой карточки.
 
-Наконец, последний шаг предназначен для указания запроса фильтрации данных (он становится доступен при установке флага `*Add the search query string*`). Как и в случае `_CardDataSource_`, на этом шаге можно выбрать сохраненный поисковый запрос или указать текст запроса напрямую.
+Наконец, последний шаг предназначен для указания запроса фильтрации данных (он становится доступен при установке флага `*Add the search query string*`). Как и в случае `_CardDataSource_`, на этом шаге можно выбрать сохранённый поисковый запрос или указать текст запроса напрямую.
 
 После этого работа мастера завершается, и источник данных готов к использованию.
 
