--- a/modules/appendix/pages/webservice/search/SearchCardsEx.adoc
+++ b/modules/appendix/pages/webservice/search/SearchCardsEx.adoc
@@ -31,7 +31,7 @@ sessionId:::
 search:::
 Поисковый запрос в виде xml-документ. Сформировать запрос можно, в том числе, утилитой "Docsvision Explorer" (входит в Resource Kit).
 flags:::
-Дополнительные флаг: 0 -- отсутствует; 1- в `search` передан идентификатор сохраненного поискового запроса, а не его содержимое
+Дополнительные флаг: 0 -- отсутствует; 1- в `search` передан идентификатор сохранённого поискового запроса, а не его содержимое
 parameters:::
 Параметры запроса, если поисковый запрос использует их
 
