--- a/modules/bpms/pages/com-interfaces.adoc
+++ b/modules/bpms/pages/com-interfaces.adoc
@@ -55,7 +55,7 @@
 |===
 |Свойства и методы |Тип |Параметры |Описание
 
-|`Initialize` | |`(string) Data` -- данные шлюза |Инициализирует шлюз, передавая данные, сохраненные в настройках шлюза в справочнике шлюза, как правило, xml -описание шлюза.
+|`Initialize` | |`(string) Data` -- данные шлюза |Инициализирует шлюз, передавая данные, сохранённые в настройках шлюза в справочнике шлюза, как правило, xml -описание шлюза.
 |===
 
 [[IGateUI]]
