--- a/modules/cards/pages/folder-shortcut.adoc
+++ b/modules/cards/pages/folder-shortcut.adoc
@@ -42,7 +42,7 @@ FolderCard folderCard = (FolderCard)userSession.CardManager.GetDictionary(new Gu
 
 Из объектной модели доступен переключатель режима работы папки `xref:Platform-ObjectManager-SystemCards:Folder.CurrentStyle_PR.adoc[Folder.CurrentStyle]` и идентификатор карточки папки `xref:Platform-ObjectManager-SystemCards:Folder.PropCardId_PR.adoc[Folder.PropCardID]`. Также можно выполнить соответствующую настройку из {wincl}а.
 
-При создании карточки папки надо учитывать, что, когда пользователь открывает папку, она отображается не модально и скрывается, как только пользователь переходит на другую папку. У карточки нет возможности отменить закрытие (ей не приходит вызов `xref:Platform-WinForms:CardControl.CardClosing_EV.adoc[CardControl.CardClosing]`), поэтому в её интерфейсе не должно быть средств редактирования чего-либо, что может остаться несохраненным к моменту перехода на другую папку. Лучше всего использовать интерфейс карточки для отображения чего-либо, а всё редактирование вынести на отдельные формы, по закрытии которых будет производиться сохранение данных.
+При создании карточки папки надо учитывать, что, когда пользователь открывает папку, она отображается не модально и скрывается, как только пользователь переходит на другую папку. У карточки нет возможности отменить закрытие (ей не приходит вызов `xref:Platform-WinForms:CardControl.CardClosing_EV.adoc[CardControl.CardClosing]`), поэтому в её интерфейсе не должно быть средств редактирования чего-либо, что может остаться несохранённым к моменту перехода на другую папку. Лучше всего использовать интерфейс карточки для отображения чего-либо, а всё редактирование вынести на отдельные формы, по закрытии которых будет производиться сохранение данных.
 
 В примере проверяется наличие у папки подпапки с названием "Завершенные". Если папка с заданным именем отсутствует, она будет создана.
 
