--- a/modules/schemas/pages/release/Core/SavedSearches.adoc
+++ b/modules/schemas/pages/release/Core/SavedSearches.adoc
@@ -1,8 +1,8 @@
-= Карточка сохраненных поисковых запросов
+= Карточка сохранённых поисковых запросов
 
 * Идентификатор: `05E4BE46-6304-42A7-A780-FD07F7541AF0`
 * Псевдоним: `SavedSearchCard`
-* Название: _Карточка сохраненных поисковых запросов_
+* Название: _Карточка сохранённых поисковых запросов_
 
 == Секции карточки
 
@@ -22,14 +22,14 @@
 
 === Подчиненные секции
 
-=== Секция "Сохраненные поисковые запросы"
+=== Секция "сохранённые поисковые запросы"
 
 * Идентификатор: `FB2AC41F-1911-4F7C-B631-18CFAEB311BD
 * Псевдоним: `Queries`
-* Название: _Сохраненные поисковые запросы_
+* Название: _сохранённые поисковые запросы_
 * Тип секции: `coll`
 
-.Поля секции "Сохраненные поисковые запросы"
+.Поля секции "сохранённые поисковые запросы"
 [width="100%",cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
@@ -44,14 +44,14 @@
 
 === Подчиненные секции
 
-=== Секция "Сохраненные разметки поисковых запросов"
+=== Секция "сохранённые разметки поисковых запросов"
 
 * Идентификатор: `DC8A71DC-D2BB-4875-8B9F-0BBFF04383F7`
 * Псевдоним: `Layouts`
-* Название: _Сохраненные разметки поисковых запросов_
+* Название: _сохранённые разметки поисковых запросов_
 * Тип секции: `coll`
 
-.Поля секции "Сохраненные разметки поисковых запросов"
+.Поля секции "сохранённые разметки поисковых запросов"
 [width="100%",cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
