--- a/modules/schemas/pages/release/Core/SavedViews.adoc
+++ b/modules/schemas/pages/release/Core/SavedViews.adoc
@@ -1,8 +1,8 @@
-= Карточка сохраненных представлений
+= Карточка сохранённых представлений
 
 * Идентификатор: `17F8F0B3-7E93-45E9-B250-EED4E93F3FA3`
 * Псевдоним: `SavedViewCard`
-* Название: _Карточка сохраненных представлений_
+* Название: _Карточка сохранённых представлений_
 
 == Секции карточки
 
@@ -22,14 +22,14 @@
 
 === Подчиненные секции
 
-=== Секция "Сохраненные представления"
+=== Секция "сохранённые представления"
 
 * Идентификатор: `A6B842C8-4876-4B5A-BFD7-7A9BB2CEA657`
 * Псевдоним: `Views`
-* Название: _Сохраненные представления_
+* Название: _сохранённые представления_
 * Тип секции: `coll`
 
-.Поля секции "Сохраненные представления"
+.Поля секции "сохранённые представления"
 [width="100%",cols="20%,20%,20%,20%,20%",options="header"]
 |===
 |Псевдоним |Название |Тип поля |Размер |Дополнительная информация
