--- a/modules/schemas/pages/standard-card-fields.adoc
+++ b/modules/schemas/pages/standard-card-fields.adoc
@@ -72,8 +72,8 @@
 |xref:release/Core/UserProfile.adoc[Карточка настроек пользователя]
 |xref:release/Core/Numerator.adoc[Карточка нумератора]
 |xref:release/Core/Folders.adoc[Карточка папок]
-|xref:release/Core/SavedSearches.adoc[Карточка сохраненных поисковых запросов]
-|xref:release/Core/SavedViews.adoc[Карточка сохраненных представлений]
+|xref:release/Core/SavedSearches.adoc[Карточка сохранённых поисковых запросов]
+|xref:release/Core/SavedViews.adoc[Карточка сохранённых представлений]
 |xref:release/Core/VersionedFile.adoc[Карточка файла с версиями]
 |xref:release/Core/RefComponents.adoc[Справочник компонентов]
 |xref:release/Core/Settings.adoc[Системные настройки]
