--- a/modules/views/pages/data-description.adoc
+++ b/modules/views/pages/data-description.adoc
@@ -2,14 +2,14 @@
 
 Описание данных представления хранится в специальной системной карточке и представляет собой XML-документ (так же как схемы карточек и библиотек). Однако, работать с этим описанием, оперируя непосредственно узлами и атрибутами XML-документа, было бы слишком сложно и неудобно. Поэтому в объектной модели системы предусмотрен ряд специальных объектов, которые позволяют работать с описанием представления уже на уровне семантических объектов (полей карточек, операций с ними).
 
-Базовым объектом в этой модели является объект `xref:Platform-ObjectManager-ViewModel:View_CL.adoc[View]`. Этот объект является создаваемым (например, его можно создать при добавлении в систему нового описания представления). Также он может быть проинициализирован на основании существующего описания представления, сохраненного в карточке `xref:Platform-ObjectManager-SystemCards:ViewCard_CL.adoc[ViewCard]`.
+Базовым объектом в этой модели является объект `xref:Platform-ObjectManager-ViewModel:View_CL.adoc[View]`. Этот объект является создаваемым (например, его можно создать при добавлении в систему нового описания представления). Также он может быть проинициализирован на основании существующего описания представления, сохранённого в карточке `xref:Platform-ObjectManager-SystemCards:ViewCard_CL.adoc[ViewCard]`.
 
 .Доступ к представлению из карточки представления
 image::ROOT:get-view-from-card.png[Доступ к представлению из карточки представления]
 
-Для загрузки существующего описания представления используется вспомогательный объект `xref:Platform-ObjectManager-SystemCards:SavedView_CL.adoc[SavedView]` (сохраненное описание представления), который можно получить из карточки сохраненных представлений (`ViewCard`).
+Для загрузки существующего описания представления используется вспомогательный объект `xref:Platform-ObjectManager-SystemCards:SavedView_CL.adoc[SavedView]` (сохранённое описание представления), который можно получить из карточки сохранённых представлений (`ViewCard`).
 
-Карточка сохраненных представлений является справочником, поэтому её экземпляр всегда можно получить:
+Карточка сохранённых представлений является справочником, поэтому её экземпляр всегда можно получить:
 
 [source,csharp]
 ----
@@ -17,7 +17,7 @@ const string VIEW_CARD_ID = "17F8F0B3-7E93-45E9-B250-EED4E93F3FA3";
 ViewCard vcard = (ViewCard)session.CardManager.GetDictionary(new Guid(VIEW_CARD_ID));
 ----
 
-Из коллекции сохраненных описаний объекта свойство `xref:Platform-ObjectManager-SystemCards:ViewCard.Views_PR.adoc[Views`], необходимое выбрать нужное представление и вызвать метод `xref:Platform-ObjectManager-SystemCards:SavedView.Export_MT.adoc[SavedView.Export]`, чтобы на выходе получить низкоуровневый объект `xref:Platform-ObjectManager-ViewModel:View_CL.adoc[View]` для непосредственного редактирования описания представления.
+Из коллекции сохранённых описаний объекта свойство `xref:Platform-ObjectManager-SystemCards:ViewCard.Views_PR.adoc[Views`], необходимое выбрать нужное представление и вызвать метод `xref:Platform-ObjectManager-SystemCards:SavedView.Export_MT.adoc[SavedView.Export]`, чтобы на выходе получить низкоуровневый объект `xref:Platform-ObjectManager-ViewModel:View_CL.adoc[View]` для непосредственного редактирования описания представления.
 
 Отдельно стоит рассмотреть использование виртуальных полей. Виртуальные поля представляют собой наборы правил, согласно которым можно извлечь данные из физических таблиц базы данных. Для этого необходимо использовать вычисления, агрегации, присоединении и т.д. Определения виртуальных полей привязаны к конкретному типу секции, от которой начинается процесс вычислений.
 
@@ -25,7 +25,7 @@ ViewCard vcard = (ViewCard)session.CardManager.GetDictionary(new Guid(VIEW_CARD_
 
 Также виртуальные поля можно создать (выделить) в процессе построения конкретного представления, и сохранить как отдельные объекты для дальнейшего использования в других представлениях по аналогичной секции. Такие виртуальные поля создаются на основе готовых элементов представлений `xref:Platform-ObjectManager-ViewModel:ViewElement_CL.adoc[ViewElement]` при помощи метода `xref:Platform-ObjectManager-ViewModel:ViewElement.ExtractVirtualField_MT.adoc[ExtractVirtualField]`. Они сохраняются в той же системной карточке `xref:Platform-ObjectManager-SystemCards:ViewCard_CL.adoc[ViewCard]`, что и описания представлений, и доступны для последующего повторного использования через её объектную модель. Для работы с такими виртуальными полями используется другой тип объектов -- `xref:Platform-ObjectManager-SystemCards:SavedVirtualField_CL.adoc[SavedVirtualField]`.
 
-.Пример добавления предварительно сохраненного виртуального поля к описанию представления:
+.Пример добавления предварительно сохранённого виртуального поля к описанию представления:
 [source,csharp]
 ----
 const string SECTION_TYPE_ID = "{8C77892A-21CC-4972-AD71-A9919BCA8187}";
@@ -37,7 +37,7 @@ SavedVirtualField  savedField = savedColl["Performer"]; <.>
 ViewElement element;
 element.MergeVirtualField(savedField.Export(), "Performers", "Performers"); <.>
 ----
-<.> Получение сохраненных определений виртуальных полей для конкретного типа секции.
+<.> Получение сохранённых определений виртуальных полей для конкретного типа секции.
 <.> Получение поля с псевдонимом `Performer`.
 <.> Добавление поля к описанию представления.
 
