--- a/modules/views/pages/delayed-changes.adoc
+++ b/modules/views/pages/delayed-changes.adoc
@@ -24,7 +24,7 @@ card.BeginUpdate(); <.>
 card.EndUpdate();
 ----
 
-Также существует возможность отменить несохраненные изменения, вызвав метод `CancelUpdate`:
+Также существует возможность отменить несохранённые изменения, вызвав метод `CancelUpdate`:
 
 [source,csharp]
 ----
@@ -88,14 +88,14 @@ objectContext.SaveObject(card); <.>
 ----
 <.> Сохранение изменений в измененном объекте `card`.
 +
-* `xref:Platform-ObjectModel:ObjectContext.RollbackChanges_MT.adoc[ObjectContext.RollbackChanges]` -- отменяет все несохраненные изменения контекста объектов:
+* `xref:Platform-ObjectModel:ObjectContext.RollbackChanges_MT.adoc[ObjectContext.RollbackChanges]` -- отменяет все несохранённые изменения контекста объектов:
 +
 [source,csharp]
 ----
 objectContext.RollbackChanges();
 ----
 +
-* `xref:Platform-ObjectModel:ObjectContext.RollBackObject_MT.adoc[ObjectContext.RollBackObject]` -- отменяет несохраненные изменения одного объекта:
+* `xref:Platform-ObjectModel:ObjectContext.RollBackObject_MT.adoc[ObjectContext.RollBackObject]` -- отменяет несохранённые изменения одного объекта:
 +
 [source,csharp]
 ----
