--- a/modules/BackOffice-WinForms/pages/BaseCardControl_CL.adoc
+++ b/modules/BackOffice-WinForms/pages/BaseCardControl_CL.adoc
@@ -43,9 +43,9 @@ public class BaseCardControl : CardControl, ICustomizableControl, ICardView
 |Имя |Описание
 |`xref:BaseCardControl.ChangeState_MT.adoc[ChangeState(StatesStateMachineBranch)]` |Изменяет состояние карточки следуя предоставленному переходу автомата состояний.
 |`xref:BaseCardControl.Commit_MT.adoc[Commit]` |Сохраняет данные карточки.
-|`xref:BaseCardControl.HasChanges_MT.adoc[HasChanges]` |Возвращает признак наличия не сохраненных изменений в контексте объектов.
+|`xref:BaseCardControl.HasChanges_MT.adoc[HasChanges]` |Возвращает признак наличия не сохранённых изменений в контексте объектов.
 |`xref:BaseCardControl.ReloadLayout_MT.adoc[ReloadLayout(Boolean)]` |Перезагружает разметку карточки.
-|`xref:BaseCardControl.Rollback_MT.adoc[Rollback]` |Отменяет несохраненные изменения данных карточки.
+|`xref:BaseCardControl.Rollback_MT.adoc[Rollback]` |Отменяет несохранённые изменения данных карточки.
 |`xref:BaseCardControl.Save_MT.adoc[Save]` |Сохраняет данные карточки в случае отсутствия в них ошибок.
 |`xref:BaseCardControl.ValidateProperties_MT.adoc[ValidateProperties]` |Проверяет данные карточки на наличие ошибок. При наличии ошибок будет выдано соответствующее сообщение.
 |`xref:BaseCardControl.ValidateProperties_1_MT.adoc[ValidateProperties(Boolean)]` |Проверяет данные карточки на наличие ошибок с возможностью отключения сообщения о наличии ошибок.
