--- a/modules/Platform-ObjectManager-CardManager/pages/CardManager.FindCardsInfo_2_MT.adoc
+++ b/modules/Platform-ObjectManager-CardManager/pages/CardManager.FindCardsInfo_2_MT.adoc
@@ -30,4 +30,4 @@ parameters:::
 
 == Заметки
 
-Поиск осуществляется согласно заданному запросу, сохраненному в системе.
+Поиск осуществляется согласно заданному запросу, сохранённому в системе.
