--- a/modules/Platform-ObjectManager-SystemCards/pages/SavedView.CancelUpdate_MT.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/SavedView.CancelUpdate_MT.adoc
@@ -1,6 +1,6 @@
 = SavedView.CancelUpdate -- метод
 
-Отменяет несохраненные изменения и выключает режим отложенных изменений.
+Отменяет несохранённые изменения и выключает режим отложенных изменений.
 
 * *Пространство имён:* `xref:SystemCards_NS.adoc[DocsVision.Platform.ObjectManager.SystemCards]`
 * *Сборка:* `DocsVision.Platform.ObjectManager.dll`
