--- a/modules/Platform-ObjectManager-SystemCards/pages/ViewCard.GetVirtualFields_MT.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/ViewCard.GetVirtualFields_MT.adoc
@@ -1,6 +1,6 @@
 = ViewCard.GetVirtualFields -- метод (Guid)
 
-Получает коллекцию сохраненных описаний виртуальных полей для секции заданного типа.
+Получает коллекцию сохранённых описаний виртуальных полей для секции заданного типа.
 
 * *Пространство имён:* `xref:SystemCards_NS.adoc[DocsVision.Platform.ObjectManager.SystemCards]`
 * *Сборка:* `DocsVision.Platform.ObjectManager.dll`
