--- a/modules/Platform-ObjectModel/pages/ObjectContext_CL.adoc
+++ b/modules/Platform-ObjectModel/pages/ObjectContext_CL.adoc
@@ -52,7 +52,7 @@ public sealed class ObjectContext : IDisposable, IServiceContainer, IServiceProv
 |`xref:ObjectContext.LockObject_MT.adoc[LockObject(IObjectRef, Boolean)]` |Блокирует объект по переданной ссылке.
 |`xref:ObjectContext.LockObject_1_MT.adoc[LockObject(ObjectBase, Boolean)]` |Блокирует переданный объект.
 |`xref:ObjectContext.RollbackChanges_MT.adoc[RollbackChanges]` |Отменяет все изменения в контексте объектов, которые не были сохранены методом `AcceptChanges`, `SaveObject<T>(T)` или `SaveObjects<T>(IEnumerable<T>)`.
-|`xref:ObjectContext.RollBackObject_MT.adoc[RollBackObject(ObjectBase)]` |Отменяет несохраненные изменения в заданном объекте.
+|`xref:ObjectContext.RollBackObject_MT.adoc[RollBackObject(ObjectBase)]` |Отменяет несохранённые изменения в заданном объекте.
 |`xref:ObjectContext.SaveObject_1_MT.adoc[SaveObject(ObjectBase)]` |Сохраняет изменения выбранного объекта.
 |`xref:ObjectContext.SaveObject_MT.adoc[SaveObject<T>(T)]` |Сохраняет изменения выбранного объекта.
 |`SaveObjects<T>(IEnumerable<T>)` |Сохраняет изменения в заданной коллекции объектов.
