--- a/modules/cards/pages/search.adoc
+++ b/modules/cards/pages/search.adoc
@@ -64,7 +64,7 @@ query.Scope.Folders.AddNew(new Guid("C0BCEB41-A19B-4813-A355-82EB6FD4F5F0")).Inc
 
 Значение __ForSearch=__**false** означает, что строка получается для сохранения где-либо и поэтому в неё включаются все настройки поиска. Второй параметр метода -- `Parameters` -- содержит массив значений, которые будут подставлены на место параметров, заданных в поиске.
 
-Существует также обратный метод -- `ParseXml`(**string**__queryXml__). С его помощью можно проинициализировать объект `SearchQuery` из сохраненной строки XML-запроса.
+Существует также обратный метод -- `ParseXml`(**string**__queryXml__). С его помощью можно проинициализировать объект `SearchQuery` из сохранённой строки XML-запроса.
 
 Полнотекстовая часть поискового запроса (`FullTextSearch`) очень проста и позволяет задать только саму строку для поиска (`QueryString`) и режим поиска (`Mode`), чтобы ограничить поиск только файлами или всеми карточками. Поиск возможен только по карточкам, для которых в схеме разрешен поиск. В результате поиска по файлам будут возвращены карточки-владельцы найденных файлов, а не сами файлы.
 
@@ -269,10 +269,10 @@ RowData row = section.FindRow("@SurName=\"" + strName + "\""); <.>
 
 Поисковый запрос, созданный вручную или с использованием объектной модели, может быть сохранен в системе для дальнейшего использования (например, в виртуальных папках).
 
-.Сохраненный запрос
-image::ROOT:saves-search-query.png[Сохраненный запрос]
+.сохранённый запрос
+image::ROOT:saves-search-query.png[сохранённый запрос]
 
-Для хранения сформированных запросов в системе предусмотрена специальная карточка -- карточка сохраненных поисковых запросов (`SavedSearchCard`), расположенная в системной библиотеке карточек (`DocsVision.Platform.ObjectManager.SystemCards`). Чтобы избежать необходимости оперировать с данными этой карточки напрямую, в объектной модели реализован соответствующий объект -- `SearchCard`. Данная карточка является справочником, и поэтому может быть получена по идентификатору типа:
+Для хранения сформированных запросов в системе предусмотрена специальная карточка -- карточка сохранённых поисковых запросов (`SavedSearchCard`), расположенная в системной библиотеке карточек (`DocsVision.Platform.ObjectManager.SystemCards`). Чтобы избежать необходимости оперировать с данными этой карточки напрямую, в объектной модели реализован соответствующий объект -- `SearchCard`. Данная карточка является справочником, и поэтому может быть получена по идентификатору типа:
 
 [source,csharp]
 ----
@@ -291,7 +291,7 @@ SearchCard searchCard = (SearchCard)session.CardManager.GetDictionary(new Guid(S
 searchCard.Queries.AddNew("Мой новый запрос").Import(oQuery); <.>
 ----
 <.> Формирование поискового запроса.
-<.> Получение карточки сохраненных запросов.
+<.> Получение карточки сохранённых запросов.
 <.> Сохранение запроса в карточку.
 
 [#om]
