--- a/modules/views/pages/views.adoc
+++ b/modules/views/pages/views.adoc
@@ -16,7 +16,7 @@
 .В свою очередь, каждое описание представления разделено на две логические части:
 * Описание (схема) данных -- эта часть определяет, какие именно данные и каким способом необходимо выбрать из базы данных.
 +
-Это описание в формате XML физически хранится в специальной системной карточке сохраненных представлений (`SavedViewCard`). При каждом изменении этой схемы происходит автоматическая генерация хранимых процедур в БД, которые предназначены для получения собственно данных (эти процедуры имеют имена `dvview_get_data_ID-представления)`.
+Это описание в формате XML физически хранится в специальной системной карточке сохранённых представлений (`SavedViewCard`). При каждом изменении этой схемы происходит автоматическая генерация хранимых процедур в БД, которые предназначены для получения собственно данных (эти процедуры имеют имена `dvview_get_data_ID-представления)`.
 +
 * Описание форматирования -- эта часть определяет, как именно полученные данные нужно показать в пользовательском интерфейсе (имена и порядок колонок, группировки, сортировки и т.д.).
 +
