--- a/modules/cards/pages/get-section.adoc
+++ b/modules/cards/pages/get-section.adoc
@@ -85,7 +85,7 @@ foreach (var folderRow in row.ChildRows) <.>
 Способ получения данных из секции карточки на этом уровне API зависит от способа представления этой секции в объектной модели карточки:
 
 . Для предоставления данных отдельной секции объектная модель карточки содержит свойство, возвращающее сущность секции, а точнее коллекцию сущностей её строк. Таким образом данные секции могут быть получены из свойства класса объектной модели карточки. Такой способ реализации является основным для объектной модели карточек библиотеки _{bo}_.
-. Объектная модель карточки не содержит отдельных свойств, возвращающих сущность секции (как в первом случае), но класс объектной карточки унаследован от класса `xref:xref:BackOffice-ObjectModel-BaseCard:BaseCard_CL.adoc[BaseCard]`. В этом случае коллекция строк секции может быть получена с помощью метода `xref:BackOffice-ObjectModel-BaseCard:BaseCard.GetSection_MT.adoc[GetSection]`.
+. Объектная модель карточки не содержит отдельных свойств, возвращающих сущность секции (как в первом случае), но класс объектной карточки унаследован от класса `xref:BackOffice-ObjectModel-BaseCard:BaseCard_CL.adoc[BaseCard]`. В этом случае коллекция строк секции может быть получена с помощью метода `xref:BackOffice-ObjectModel-BaseCard:BaseCard.GetSection_MT.adoc[GetSection]`.
 +
 [NOTE]
 ====
